@startuml

hide empty members

set namespaceSeparator \\

namespace Specification {

    interface HandlerRegistry
    class BasicHandlerRegistry

    BasicHandlerRegistry ..|> HandlerRegistry
}

namespace Specification\\Doctrine {

    interface QueryBuilderFactory {
''        createQueryBuilder(EntityManagerInterface): QueryBuilder
    }

    class Bridge

    Bridge --|> Specification\\BasicHandlerRegistry
    Bridge ..|> QueryBuilderFactory
}

@enduml